--- a/src/main/resources/templates/purchasingmanagement1/drug_item_maintenance1.html
+++ b/src/main/resources/templates/purchasingmanagement1/drug_item_maintenance1.html
@@ -476,7 +476,7 @@
                 <input type="file" name="file" id="file">
             </div>
             <div class="modal-footer">
-                <button class="btn btn-success" onclick="uploadfile()">上传</button>
+                <button class="btn btn-success" onclick="upload()">导入</button>
                 <button class="btn btn-warning" onclick="">查看导入失败结果</button>
                 <button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">关闭</button>
             </div>
