--- a/src/main/resources/templates/systemmanagement/user_management.html
+++ b/src/main/resources/templates/systemmanagement/user_management.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.springframework.org/schema/jdbc">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="layui/css/layui.css">
     <script src="layui/layui.js"></script>
     <script src="js/jQuery/jquery-2.2.3.min.js"></script>
+    <script src="angularjs/angular.min.js"></script>
     <script type="text/javascript">
         $(function () {
             readList();
@@ -31,10 +31,25 @@
                 }
             });
         })
+        layui.use(['upload'], function() {
+            var laypage = layui.laypage
+                ,upload = layui.upload;
+            upload.render({
+                elem: '#uploadFile'
+                ,url: 'http://localhost:8080/uploadFile' //自己的上传接口
+                ,accept: 'file' //普通文件
+                ,done: function(res){
+                    layer.msg('上传成功');
+                    console.log(res);
+                }
+            });
+        })
 
+        var result = null;
       /*  查询所有信息*/
-        function readList() {
+        function readList(pageNum) {
             $("#tbody").empty();
+            $("#page").empty();
             var userId = $("#userId").val();
             var userAccount = $("#userAccount").val();
             var contactAddress = $("#contactAddress").val();
@@ -44,37 +59,39 @@
                     "userId":userId,
                     "userAccount":userAccount,
                     "contactAddress":contactAddress,
-                    "userState":0
+                    "userState":0,
+                    "pageNum":pageNum
                 },
                 type:"post",
                 dataType:"json",
                 success:function (data) {
-                    /*layer.open({
-                        title: '执行结果'
-                        ,content: '查询成功'
-                        ,time: 1000
-                        ,anim: 5
-                    });*/
+                    result = data.list;
                     var v = "";
-                    for (var i = 0; i < data.length; i++) {
+                    for (var i = 0; i < data.list.length; i++) {
                         v += "<tr>";
-                        v += '<td><input type="checkbox" value="'+data[i].userId+'" name="chose" /></td>'
-                       /* v += "<td>"+data[i].userId+"</td>"*/
-                        v += "<td>"+data[i].userAccount+"</td>"
-                        v += "<td>"+data[i].role.roleDescription+"</td>"
-                        v += "<td>"+data[i].username+"</td>"
-                        v += "<td>"+data[i].userUnit+"</td>"
-                        v += "<td>"+data[i].contactAddress+"</td>"
-                        v += "<td>"+data[i].postalCode+"</td>"
-                        v += "<td>"+data[i].contacts+"</td>"
-                        v += "<td>"+data[i].userPhone+"</td>"
-                        v += "<td>"+data[i].userEmail+"</td>"
+                        v += '<td><input type="checkbox" value="'+data.list[i].userId+'" name="chose" /></td>'
+                        v += "<td>"+data.list[i].userAccount+"</td>"
+                        v += "<td>"+data.list[i].role.roleDescription+"</td>"
+                        v += "<td>"+data.list[i].username+"</td>"
+                        v += "<td>"+data.list[i].userUnit+"</td>"
+                        v += "<td>"+data.list[i].contactAddress+"</td>"
+                        v += "<td>"+data.list[i].postalCode+"</td>"
+                        v += "<td>"+data.list[i].contacts+"</td>"
+                        v += "<td>"+data.list[i].userPhone+"</td>"
+                        v += "<td>"+data.list[i].userEmail+"</td>"
 /*                        v += '<td><button class="layui-btn  layui-btn-normal layui-btn-sm" onclick="lookInformation('+data[i].userId+')">查看</button></td>';*/
-                        v += '<td><button class="layui-btn  layui-btn-warm layui-btn-sm" onclick="editInformation('+data[i].userId+')">修改</button></td>';
-                        v += '<td><button class="layui-btn  layui-btn-danger layui-btn-sm " lay-event="del" onclick="removeInformation('+data[i].userId+')">删除</button></td>';
+                        v += '<td><button class="layui-btn  layui-btn-warm layui-btn-sm" onclick="editInformation('+data.list[i].userId+')">修改</button></td>';
+                        v += '<td><button class="layui-btn  layui-btn-danger layui-btn-sm " lay-event="del" onclick="removeInformation('+data.list[i].userId+')">删除</button></td>';
                         v += "</tr>";
                     }
                     $("#tbody").append(v);
+                    var up = data.hasPreviousPage?data.prePage:1;
+                    var down = data.hasNextPage?data.nextPage:data.lastPage;
+                    var p = '<button type="button" onclick="reloadList(1)" class="layui-btn  layui-btn-normal layui-btn-sm">首页</button>';
+                    p += '<button type="button" onclick="reloadList('+up+')" class="layui-btn  layui-btn-normal layui-btn-sm">上一页</button>';
+                    p += '<button type="button" onclick="reloadList('+down+')" class="layui-btn  layui-btn-normal layui-btn-sm">下一页</button>';
+                    p += '<button type="button" onclick="reloadList('+data.lastPage+')" class="layui-btn  layui-btn-normal layui-btn-sm">尾页</button>';
+                    $("#page").append(p);
                 }
             })
         }
@@ -85,18 +102,37 @@
                 //layer提供了5种层类型。可传入的值有：0（信息框，默认）1（页面层）2（iframe层）3（加载层）4（tips层）
                 type:1,
                 title:['添加用户','font-size:18px;'],
-                area:['50%','60%'],
+                area:['50%','65%'],
                 anim:5,
                 scrollbar: false,
                 content:$("#form_add")
             })
+        }
+        function addSave() {
+          var form = $("#form_add").serialize();
+          form += "&userState = 0";
+          $.ajax({
+              url:'addUserInfo',
+              data:form,
+              dataTYpe:'json',
+              type:'post',
+              traditional: true,
+              async:false,
+              success:function (result) {
+                  location.reload();
+                  layer.alert("添加成功")
+              },error:function () {
+                  layer.alert("添加失败")
+              }
+          })
+
         }
         /*修改页面弹出层*/
         function editInformation(){
             layer.open({
                 type:1,
                 title:['修改用户信息','font-size:18px;'],
-                area:['50%','60%'],
+                area:['60%','65%'],
                 anim:5,
                 scrollbar:false,
                 content:$("#edit_add")
@@ -134,6 +170,53 @@
                 
             })
         }
+        //查询省市县
+        var app = angular.module('myApp',[]);
+        app.controller("myController",['$scope','$http',function($scope,$http){
+            /*查询所有省*/
+            $http({
+                method:'get',
+                url:'findProvince',
+                headers: {'Content-Type': 'application/x-www-form-urlencoded'}
+            }).success(function (provinces) {
+                $scope.provinces = provinces;
+                $("#updatesheng").val(provinces);
+            }).error(function (data) {
+
+            });
+            /*查询所有市*/
+    $scope.changeProvince = function(){
+        $http({
+            method:'get',
+            url:'findCityByPcode',
+            params:{"pcode":$scope.selectProvince},
+            headers: {'Content-Type': 'application/x-www-form-urlencoded'}
+        }).success(function (citys) {
+            $scope.citys = citys;
+            $("#shi").val(citys);
+            $("#updateshi").val(citys);
+        }).error(function (data) {
+
+        });
+    }
+    /*查询县*/
+    $scope.changeCity = function () {
+        $http({
+            method:'get',
+            url:'findCountyByCcode',
+            params:{"ccode":$scope.selectCity},
+            headers: {'Content-Type': 'application/x-www-form-urlencoded'}
+        }).success(function (countys) {
+            $scope.countys = countys;
+            $("#xian").val(countys);
+            $("#updatexian").val(countys);
+        }).error(function (data) {
+
+        })
+    }
+
+
+        }])
         function downExcel() {
             var v = document.getElementsByName("chose");
             var array = new Array();
@@ -228,72 +311,73 @@
             </tbody>
         </table>
     </div>
-    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
-        <!--  <legend>自定义主题 - 颜色随意定义</legend>-->
-    </fieldset>
-    <div id="demo2"></div>
+    <div id="page">
+    </div>
+
     <!-- 添加表单-->
         <form class="" id="form_add" style="display: none" >
             <br>
             <table lay-even lay-skin="line" lay-size="lg">
                 <tr class="layui-form-item">
+                     <td><label class="layui-form-label">用户Id</label></td>
+                    <td class="layui-input-block"><input class="layui-input"  type="text" name="userId"></td>
+                </tr>
+                <tr class="layui-form-item">
                     <td><label class="layui-form-label">用户名称</label></td>
-                    <td class="layui-input-block"><input class="layui-input" type="text" name="title"></td>
+                    <td class="layui-input-block"><input class="layui-input" type="text" name="userAccount"></td>
                     <td><label class="layui-form-label">用户账号</label></td>
-                    <td class="layui-input-block"><input  class="layui-input" type="text" name="title" placeholder="8-16位数字加字母"></td>
+                    <td class="layui-input-block"><input  class="layui-input" type="text" name="username" placeholder="8-16位数字加字母"></td>
                 </tr>
                 <tr class="layui-form-item">
                     <td><label class="layui-form-label">用户密码</label></td>
-                    <td class="layui-input-block"><input class="layui-input" type="text" name="title" placeholder="8-16位数字加字母特殊符号"></td>
-                    <td><label class="layui-form-label">加密盐值</label></td>
-                    <td class="layui-input-block"><input class="layui-input" type="text" name="title" ></td>
+                    <td class="layui-input-block"><input class="layui-input" type="text" name="password" placeholder="8-16位数字加字母特殊符号"></td>
+                  <!--  <td><label class="layui-form-label">加密盐值</label></td>
+                    <td class="layui-input-block"><input class="layui-input" type="text" name="salt" ></td>-->
+                    <td><label class="layui-form-label">所在单位</label></td>
+                    <td class="layui-input-block"><input class="layui-input" type="text" name="userUnit" ></td>
                 </tr>
                 <tr class="layui-form-item">
-                    <td><label class="layui-form-label">用户状态</label></td>
+                   <!-- <td><label class="layui-form-label">用户状态</label></td>
                     <td class="layui-input-block">
-                        <select lay-verify="required">
+                        <select lay-verify="required" name="userState">
                             <option value="0">请选择</option>
                             <option value="1">正常</option>
                             <option value="2">删除</option>
                         </select>
-                    </td>
-                    <td><label class="layui-form-label">所在单位</label></td>
-                    <td class="layui-input-block"><input class="layui-input" type="text" name="title" ></td>
+                    </td>-->
+
                 </tr>
-                <tr class="layui-form-item">
+                <tr class="layui-form-item" ng-app = "myApp" ng-controller= "myController" data-ng-init = "list()">
                     <td><label class="layui-form-label">联系地址</label></td>
-                    <td class="layui-input-block">
-                        <select lay-verify="required">
-                            <option value="0">请选择</option>
-                            <option value="1">北京</option>
+                    <!--<td class="layui-input-block">
+                        <select class="province" name="province" id="sheng" lay-verify="required" ng-change ="changeProvince()" ng-model = "selectProvince" ng-options="province.pcode as province.pname for province in provinces">
+                            <option value="">请选择</option>
                         </select>
-                        <select lay-verify="required">
-                            <option value="0">请选择</option>
-                            <option value="1">北京市</option>
+                        <select class="city" name="city" id="shi" lay-verify="required" ng-change="changeCity()"  ng-model = "selectCity" ng-options = " city.ccode as city.cname for city in citys">
+                            <option value="">请选择</option>
                         </select>
-                        <select  lay-verify="required">
-                            <option value="0">请选择</option>
-                            <option value="1">海淀区</option>
+                        <select class="county" name="county" id="xian" lay-verify="required" ng-change="changeCounty()" ng-model = "selectCounty" ng-options="county.tcode as county.tname for county in countys">
+                            <option value="">请选择</option>
                         </select>
                     </td>
-                    <td><label class="layui-form-label">详细地址</label></td>
-                    <td class="layui-input-block"><input class="layui-input" type="text" name="title" placeholder="如道路 门牌号 小区 楼栋号 单元室等"></td>
+                    <td><label class="layui-form-label">详细地址</label></td>-->
+                    <td class="layui-input-block"><input class="layui-input" type="text" id="addContactAddress" name="contactAddress" placeholder="如道路 门牌号 小区 楼栋号 单元室等"></td>
                 </tr>
                 <tr class="layui-form-item">
                     <td><label class="layui-form-label">邮政编码</label></td>
-                    <td class="layui-input-block"><input class="layui-input" type="text" name="title" ></td>
+                    <td class="layui-input-block"><input class="layui-input" type="text" name="postalCode" ></td>
                     <td><label class="layui-form-label">联系人</label></td>
-                    <td class="layui-input-block"><input  class="layui-input" type="text" name="title" ></td>
+                    <td class="layui-input-block"><input  class="layui-input" type="text" name="contacts" ></td>
                 </tr>
                 <tr class="layui-form-item">
                     <td><label class="layui-form-label">联系电话</label></td>
-                    <td class="layui-input-block"><input placeholder="只能以13、15、18开头" class="layui-input" type="text" name="title" ></td>
+                    <td class="layui-input-block"><input placeholder="只能以13、15、18开头" class="layui-input" type="text" name="userPhone" ></td>
                     <td><label class="layui-form-label">邮箱</label></td>
-                    <td class="layui-input-block"><input placeholder="8-16位数字+@163.com" class="layui-input" type="text" name="title" ></td>
+                    <td class="layui-input-block"><input placeholder="8-16位数字+@163.com" class="layui-input" type="text" name="userEmail" ></td>
                 </tr>
             </table>
             <div class="modal-footer">
-                <button class="layui-btn layui-btn-normal" style="float: left;margin-left:100px">提交</button>
+                <button class="layui-btn layui-btn-normal" style="float: left;margin-left:100px" onclick="addSave()">提交</button>
                 <button class="layui-btn layui-btn-normal" style="float: right;margin-right:100px">取消</button>
             </div>
         </form>
@@ -325,20 +409,17 @@
                 <td><label class="layui-form-label">所在单位</label></td>
                 <td class="layui-input-block"><input class="layui-input" type="text" name="title" ></td>
             </tr>
-            <tr class="layui-form-item">
+            <tr class="layui-form-item" ng-app = "myApp" ng-controller= "myController" data-ng-init = "list()">
                 <td><label class="layui-form-label">联系地址</label></td>
                 <td class="layui-input-block">
-                    <select lay-verify="required">
-                        <option value="0">请选择</option>
-                        <option value="1">北京</option>
+                    <select class="province" name="province" id="updatesheng" lay-verify="required" ng-options="province.pcode as province.pname for province in provinces">
+                        <option value="">请选择</option>
                     </select>
-                    <select lay-verify="required">
-                        <option value="0">请选择</option>
-                        <option value="1">北京市</option>
+                    <select class="city" name="city" id="updateshi" lay-verify="required" ng-options = " city.ccode as city.cname for city in citys">
+                        <option value="">请选择</option>
                     </select>
-                    <select  lay-verify="required">
-                        <option value="0">请选择</option>
-                        <option value="1">海淀区</option>
+                    <select class="county" name="county" id="updatexian" lay-verify="required" ng-options="county.tcode as county.tname for county in countys">
+                        <option value="">请选择</option>
                     </select>
                 </td>
                 <td><label class="layui-form-label">详细地址</label></td>
