--- a/src/main/resources/templates/supplymanagement/druginformation.html
+++ b/src/main/resources/templates/supplymanagement/druginformation.html
@@ -36,6 +36,8 @@
             var enterpriseName=$("#enterpriseNameId").val();
             var tradeName=$("#tradeName").val();
             var qualityLevelId=$("#qualityLevelId").val();
+            var price1=$("#price1").val();
+            var price2=$("#price2").val();
             $.ajax({
                 url:"DrugsInformation",
                 data:{
@@ -49,6 +51,7 @@
                     "drugTransactionStatusId":drug_transaction_status_id,
                     "enterpriseNameId":enterpriseName,
                     "tradeName":tradeName,
+                    "latestRetailPrice":price1,
                     "qualityLevelId":qualityLevelId,
                     "pageNum":pageNum
                 },
@@ -63,16 +66,16 @@
                         v+='<td><input type="checkbox" name="del" value='+data[i].id+'></td>';
                         v+='<td>'+data[i].serialNumber+'</td>'
                         v+='<td>'+data[i].commonName+'</td>'
-                        v+='<td>'+data[i].dosageFormId+'</td>'
+                        v+='<td>'+data[i].durgsFrom.drugFrom+'</td>'
                         v+='<td>'+data[i].specification+'</td>'
                         v+='<td>'+data[i].unit+'</td>'
                         v+='<td>'+data[i].conversionFraction+'</td>'
                         v+='<td>'+data[i].enterprise.enterpriseName+'</td>';
                         v+='<td>'+data[i].tradeName+'</td>';
                         v+='<td>'+data[i].biddingPrice+'</td>';
-                        v+='<td>'+data[i].qualityLevelId+'</td>';
-                        v+='<td>'+data[i].drugCategoryId+'</td>'
-                        v+='<td>'+data[i].drugTransactionStatusId+'</td>'
+                        v+='<td>'+data[i].qualityLevel.level+'</td>';
+                        v+='<td>'+data[i].drugCategory.drugCategoryName+'</td>'
+                        v+='<td>'+data[i].drugTransactionStatus.drugTransactionExplain+'</td>'
                         v+='<td><a href="#" data-target="#editModal1" data-toggle="modal" onclick="saw('+data[i].id+')">查看</a></td>'
                         v+='</tr>';
                     }
@@ -293,7 +296,7 @@
                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">价格范围：</span>
                </td>
                <td>
-                   <input class="form-control" style="width: 120px;float: left"><span style="float: left">至</span><input class="form-control" style="width: 120px;float: left">
+                   <input class="form-control" style="width: 120px;float: left" id="price1"><span style="float: left">至</span><input class="form-control" style="width: 120px;float: left" id="price2">
                </td>
                <td style="text-align: right">
                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">质量层次：</span>
