0616王书磊第一次提交

--- a/src/main/resources/templates/supervision/drug_item_maintenance.html
+++ b/src/main/resources/templates/supervision/drug_item_maintenance.html
@@ -33,7 +33,7 @@
 		function xiazai(){
 			window.location.href="DrugItemMaintenanceController/downloadTemplate?filenames=导入说明";
             sleep(2000);
-			window.location.href="DrugItemMaintenanceController/downloadTemplate1?filenames=药品信息模板";
+			window.location.href="DrugItemMaintenanceController/downloadTemplate1?filenames=药品品目信息模板";
 		}
 	</script>
 
