--- a/src/main/resources/templates/supervision/purchase_order_approval.html
+++ b/src/main/resources/templates/supervision/purchase_order_approval.html
@@ -15,65 +15,66 @@
 
     <script src="../js/jQuery/jquery-2.2.3.min.js"></script>
     <script src="../js/plugins/bootstrap/js/bootstrap.min.js"></script>
-
-    <script type="text/javascript">
-        function down(){
-            window.location.href="down";
-        }
-    </script>
+    <!--引入自己的js-->
+    <script src="js/supervision/purchase_order_approval.js"></script>
 
 </head>
 <body class="hold-transition skin-red sidebar-mini">
 <!-- .box-body -->
 <toaster-container toaster-options="{'time-out': 1000,'position-class':'toast-top-center'}"></toaster-container>
-<div class="panel panel-info">
-    <!-- Default panel contents -->
-    <div class="panel-heading">采购单审核</div>
-    <!-- Table -->
-    <table class="table">
-        <tr>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购单编号：</span>
-            </td>
-            <td >
-                <input class="form-control">
-            </td>
-            <td style="text-align: right"><span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购单名称：</span>
-            </td>
-            <td >
-                <input class="form-control" id="searchEntity_organizationalCode">
-            </td>
-        </tr>
-        <tr>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购单状态：</span>
-            </td>
-            <td>
-                <select style="width: 50%;height: 20%">
-                    <option value="0">请选择</option>
-                </select>
-                <!-- <input class="form-control" id="searchEntity_nameOfRegistrant" >-->
-            </td>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购时间：</span>
-            </td>
-            <td style="word-break: keep-all;white-space: nowrap;width: 32%">
-                <input style="width: 23%"><span style="color: #0E74B4">至</span><input style="width: 23%;">
-            </td>
-        </tr>
-        <tr>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">医院名称：</span>
-            </td>
-            <td>
-                <input class="form-control">
-            </td>
-        </tr>
-    </table>
-    <div style="text-align: center;padding-top: 10px">
-        <button class="btn btn-success btn-sm" onclick="">查询</button>
+<form action="" id="fuzzyFormId" method="post">
+    <div class="panel panel-info">
+        <!-- Default panel contents -->
+        <div class="panel-heading">采购单审核</div>
+        <!-- Table -->
+        <table class="table">
+            <tr>
+                <td style="text-align: right">
+                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购单编号：</span>
+                </td>
+                <td >
+                    <input name="purchaseOrderNumber">
+                </td>
+                <td style="text-align: right"><span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购单名称：</span>
+                </td>
+                <td >
+                    <input name="nameOfPurchaseOrder">
+                </td>
+            </tr>
+            <tr>
+                <td style="text-align: right">
+                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购单状态：</span>
+                </td>
+                <td>
+                    <select name="purchaseState" style="width: 50%;height: 20%">
+                        <option value="0">请选择</option>
+                    </select>
+                    <!-- <input class="form-control" id="searchEntity_nameOfRegistrant" >-->
+                </td>
+                <td style="text-align: right">
+                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购时间：</span>
+                </td>
+                <td style="word-break: keep-all;white-space: nowrap;width: 32%">
+                    <input name="procurementStartTime" style="width: 23%"><span style="color: #0E74B4">至</span><input name="procurementEndTime" style="width: 23%;">
+                </td>
+            </tr>
+            <tr>
+                <td style="text-align: right">
+                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">医院名称：</span>
+                </td>
+                <td>
+                    <select style="width: 50%;height: 20%" name="hospitalId" id="hospitalId">
+                        <option value="0">请选择</option>
+                    </select>
+                    <!--<input name="hospitalId">-->
+                </td>
+            </tr>
+        </table>
+        <div style="text-align: center;padding-top: 10px">
+            <button type="button" class="btn btn-success btn-sm" onclick="fenye()">查询</button>
+        </div>
     </div>
-</div>
+</form>
 <div class="box-body">
     <!-- 数据表格 -->
     <div class="table-box">
